# elf

./: CMakeLists.txt  vcpkg.json
.github/workflows/: build.yml
cmake/: elf-cpp-config.cmake.in
include/elf/: endian.h  error.h  header.h  reader.h  relocation.h  section.h  segment.h  symbol.h
src/: error.cpp  header.cpp  reader.cpp  relocation.cpp  section.cpp  segment.cpp  symbol.cpp
